--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -11,6 +11,7 @@
     html {
         @apply bg-white dark:bg-black;
         @apply text-black text-center dark:text-white;
+        @apply font-mono;
     }
     h1 {
         @apply text-5xl;
@@ -20,13 +21,11 @@
         @apply text-xl;
     }
     button {
-        @apply border-2 rounded-md p-2 ml-2 mr-2;
-        @apply border-indigo-950 dark:border-gray-500;
-        @apply bg-gray-800 dark:bg-white;
-        @apply text-white dark:text-black;
+        @apply border-2 rounded-md p-2 ml-4 mr-4;
         @apply cursor-pointer;
     }
     header {
-        @apply flex items-center justify-between p-4 shadow-md bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100;
+        @apply flex items-center justify-between p-4 mb-10 shadow-md;
+        @apply bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100;
     }
 }
