--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -12,6 +12,7 @@
         @apply bg-white dark:bg-black;
         @apply text-black text-center dark:text-white;
         @apply font-mono;
+        @apply transition duration-200;
     }
     h1 {
         @apply text-5xl;
@@ -21,7 +22,7 @@
         @apply text-xl;
     }
     button {
-        @apply border-2 rounded-md p-2 ml-4 mr-4;
+        @apply border-2 rounded-3xl p-2 ml-4 mr-4;
         @apply cursor-pointer;
     }
     header {
