--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -27,7 +27,9 @@
 @layer base {
 
     html {
-
+    }
+    main {
+        @apply container mx-auto max-w-2xl items-center grow;
     }
     body {
         @apply bg-primary-50 dark:bg-primary-950;
