--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -46,18 +46,16 @@
         @apply text-xl;
     }
     button {
-        @apply border-2 rounded-3xl p-2 ml-4 mr-4;
+        @apply rounded-lg p-2 ml-4 mr-4;
         @apply cursor-pointer;
-        @apply bg-primary-50 dark:bg-primary-950;
-        @apply border-secondary-100 dark:border-secondary-900;
-        @apply transition duration-300;
+        @apply preset-outlined-primary-600-400 dark:preset-outlined-primary-600-400;
+        @apply transition duration-100;
     }
     button:hover {
-        @apply bg-primary-200 dark:bg-secondary-900;
-        @apply border-primary-400 dark:border-tertiary-900;
+        @apply preset-filled-primary-600-400 dark:preset-filled-primary-600-400;
     }
     header {
         @apply flex items-center justify-between p-4 mb-10 shadow-md;
-        @apply bg-primary-100 dark:bg-primary-800 text-primary-950 dark:text-primary-50;
+        @apply bg-surface-100 dark:bg-surface-900 text-primary-950 dark:text-primary-50;
     }
 }
