--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -30,32 +30,39 @@
     html {
     }
     main {
-        @apply container mx-auto max-w-2xl items-center grow;
+        @apply container mx-auto max-w-4xl items-center grow;
     }
     body {
-        @apply bg-surface-50 dark:bg-surface-950;
-        @apply text-primary-950 text-center dark:text-primary-50;
+        @apply bg-surface-100-900;
+        @apply text-surface-950-50 text-center;
         @apply font-mono;
         @apply transition duration-100;
     }
     h1 {
         @apply text-5xl;
-        @apply dark:text-primary-50 text-primary-950;
+        @apply text-surface-950-50;
     }
     h4 {
         @apply text-xl;
     }
     button {
-        @apply rounded-lg p-2 ml-4 mr-4;
+        @apply rounded-2xl p-2 ml-4 mr-4;
         @apply cursor-pointer;
-        @apply preset-outlined-primary-600-400 dark:preset-outlined-primary-600-400;
+        @apply preset-outlined-primary-300-700 dark:preset-outlined-tertiary-200-800;
         @apply transition duration-100;
     }
     button:hover {
-        @apply preset-filled-primary-600-400 dark:preset-filled-primary-600-400;
+        @apply preset-filled-primary-500 dark:preset-filled-tertiary-500;
     }
     header {
-        @apply flex items-center justify-between p-4 mb-10 shadow-md;
-        @apply bg-surface-100 dark:bg-surface-900 text-primary-950 dark:text-primary-50;
+        @apply flex items-center justify-between p-4 mb-10 container mx-auto max-w-5xl rounded-4xl mt-4;
+    }
+    .link-button {
+        @apply btn capitalize preset-outlined-primary-300-700 dark:preset-outlined-tertiary-200-800 rounded-2xl p-2 ml-4 mr-4;
+        @apply transition duration-100;
+        @apply hover:preset-filled-primary-500 hover:dark:preset-filled-tertiary-500;
+    }
+    .shadows {
+        @apply shadow-xl shadow-primary-300 dark:shadow-tertiary-200-800 border-t border-t-primary-300 dark:border-t-tertiary-800;
     }
 }
